# cat_face_dect

./: .gitignore  CMakeLists.txt  readme.md
script/: cv_load_onnx.py  cv_resize.py  cv_rs_detection.py  cv_video_detection.py  image_metric.py  onnx_torch.py  show_network.py
src/: main.cpp  main1.cpp  main_rs.cpp
